Revamp meal planner layout and features

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <header class="topbar">
     <div class="brand">
       <h1>Meal Planner</h1>
-      <p>Plan semanal (tupper + cenas) · Recetas · Compra</p>
+      <p>Planificador en 3 secciones: calendario, recetas y compra</p>
     </div>
 
     <nav class="tabs" aria-label="Secciones">
-      <button class="tab active" data-tab="plan">Plan</button>
+      <button class="tab active" data-tab="plan">Calendario</button>
       <button class="tab" data-tab="recipes">Recetas</button>
       <button class="tab" data-tab="shop">Compra</button>
     </nav>
@@ -22,29 +22,29 @@
 
   <main class="container">
     <!-- PLAN -->
-    <section id="tab-plan" class="tabpanel active" aria-labelledby="Plan">
+    <section id="tab-plan" class="tabpanel active" aria-labelledby="Calendario">
       <div class="plan-head">
         <div class="week-controls">
           <button id="prevWeekBtn" class="btn">← Semana</button>
           <div class="week-title">
-            <div class="label">Semana</div>
+            <div class="label">Calendario (2 semanas)</div>
             <div id="weekRange" class="value">—</div>
           </div>
           <button id="nextWeekBtn" class="btn">Semana →</button>
         </div>
 
         <div class="plan-actions">
-          <button id="clearPlanBtn" class="btn danger">Vaciar semana</button>
-          <button id="copyPrevWeekBtn" class="btn">Copiar semana anterior</button>
+          <button id="clearPlanBtn" class="btn danger">Vaciar estas 2 semanas</button>
+          <button id="copyPrevWeekBtn" class="btn">Copiar 2 semanas anteriores</button>
         </div>
       </div>
 
-      <div class="grid" id="weekGrid" aria-label="Calendario semanal">
+      <div class="grid" id="weekGrid" aria-label="Calendario de dos semanas">
         <!-- Se rellena por JS -->
       </div>
 
       <div class="hint">
-        Tip: haz clic en un hueco (almuerzo/cena) para asignar una receta.
+        Tip: haz clic en un hueco (almuerzo/cena) para escribir un plato o asignar una receta guardada.
       </div>
     </section>
 
@@ -53,18 +53,21 @@
       <div class="recipes-layout">
         <div class="card">
           <div class="card-title">
-            <h2>Buscar en TheMealDB</h2>
-            <p class="muted">Busca en inglés. Si escribes en español, intento convertirlo (diccionario básico).</p>
+            <h2>Buscar ideas de recetas</h2>
+            <p class="muted">Sugerencias filtrables: saludable, Thermomix, congelable y tupper.</p>
           </div>
 
           <div class="search">
-            <input type="text" id="searchInput" placeholder="Ej: chicken, rice, lentils (o pollo, arroz...)" />
+            <input type="text" id="searchInput" placeholder="Ej: pollo al curry, lentejas, pasta..." />
             <button id="searchBtn" class="btn primary">Buscar</button>
           </div>
 
-          <div class="info-row">
-            <div class="pill" id="searchLangInfo">—</div>
-            <div class="pill subtle">Fuente: TheMealDB</div>
+          <div class="filter-row">
+            <span class="muted">Filtros:</span>
+            <label class="tag-filter"><input type="checkbox" value="saludable"> Saludable</label>
+            <label class="tag-filter"><input type="checkbox" value="thermomix"> Thermomix</label>
+            <label class="tag-filter"><input type="checkbox" value="congelable"> Congelable</label>
+            <label class="tag-filter"><input type="checkbox" value="tupper"> Tupper</label>
           </div>
 
           <div id="results" class="results" aria-label="Resultados de búsqueda"></div>
@@ -73,16 +76,28 @@
         <div class="card">
           <div class="card-title">
             <h2>Mis recetas</h2>
-            <p class="muted">Las importadas se guardan en tu navegador (por ahora). Luego lo sincronizamos con Firebase.</p>
+            <p class="muted">Guarda ideas, filtra por etiquetas y asígnalas al calendario.</p>
           </div>
 
           <div class="my-recipes-actions">
-            <button id="exportBtn" class="btn">Exportar JSON</button>
-            <label class="btn file">
-              Importar JSON
-              <input type="file" id="importFile" accept="application/json">
-            </label>
+            <input type="text" id="myRecipeSearch" class="input" placeholder="Filtrar por nombre..." />
+            <select id="myRecipeTag" class="input">
+              <option value="all">Todas las etiquetas</option>
+              <option value="saludable">Saludable</option>
+              <option value="thermomix">Thermomix</option>
+              <option value="congelable">Congelable</option>
+              <option value="tupper">Tupper</option>
+              <option value="rapida">Rápida</option>
+            </select>
             <button id="clearRecipesBtn" class="btn danger">Borrar recetas</button>
+          </div>
+
+          <div class="inline-form">
+            <input type="text" id="customRecipeName" class="input" placeholder="Nueva receta rápida (nombre)" />
+            <input type="text" id="customRecipeTags" class="input" placeholder="Etiquetas: saludable, tupper..." />
+            <input type="text" id="customRecipeIngredients" class="input" placeholder="Ingredientes (separados por coma)" />
+            <input type="text" id="customRecipeUrl" class="input" placeholder="URL de referencia (opcional)" />
+            <button id="addCustomRecipeBtn" class="btn primary">Guardar receta</button>
           </div>
 
           <div id="myRecipes" class="my-recipes" aria-label="Lista de mis recetas"></div>
@@ -95,12 +110,35 @@
       <div class="card">
         <div class="card-title">
           <h2>Lista de la compra</h2>
-          <p class="muted">Se genera con los ingredientes de lo planificado en la semana.</p>
+          <p class="muted">Añade ingredientes manualmente o genera desde el plan semanal.</p>
         </div>
 
         <div class="shop-actions">
-          <button id="regenShopBtn" class="btn primary">Generar / Actualizar</button>
+          <button id="addFromPlanBtn" class="btn primary">Añadir ingredientes del plan</button>
           <button id="clearShopChecksBtn" class="btn">Desmarcar todo</button>
+        </div>
+
+        <div class="shop-form">
+          <input type="text" id="shopItemName" class="input" placeholder="Ingrediente" />
+          <input type="text" id="shopItemQty" class="input" placeholder="Cantidad (opcional)" />
+          <select id="shopItemCategory" class="input">
+            <option value="verdura">Verdura</option>
+            <option value="fruta">Fruta</option>
+            <option value="carne">Carne</option>
+            <option value="pescado">Pescado</option>
+            <option value="lacteos">Lácteos</option>
+            <option value="despensa">Despensa</option>
+            <option value="congelados">Congelados</option>
+            <option value="bebidas">Bebidas</option>
+            <option value="limpieza">Limpieza</option>
+            <option value="otros">Otros</option>
+          </select>
+          <button id="addShopItemBtn" class="btn">Añadir</button>
+        </div>
+
+        <div class="suggestions">
+          <div class="suggestions-title">Sugerencias rápidas</div>
+          <div id="suggestionChips" class="suggestion-chips"></div>
         </div>
 
         <div id="shoppingList" class="shopping" aria-label="Lista de la compra"></div>
@@ -114,17 +152,67 @@
       <div class="dialog-head">
         <div>
           <div class="dialog-kicker" id="pickerKicker">—</div>
-          <h3 id="pickerTitle">Elegir receta</h3>
+          <h3 id="pickerTitle">Editar hueco</h3>
         </div>
         <button class="icon-btn" value="cancel" aria-label="Cerrar">✕</button>
       </div>
 
-      <input id="pickerSearch" class="dialog-search" type="text" placeholder="Filtrar mis recetas..." />
+      <div class="dialog-columns">
+        <div class="dialog-block">
+          <h4>Escribir plato rápido</h4>
+          <input id="slotTextInput" class="dialog-search" type="text" placeholder="Ej: Ensalada de quinoa" />
+          <div class="checkbox-row">
+            <label><input type="checkbox" id="slotSaveAsRecipe"> Guardar como receta</label>
+          </div>
+          <input id="slotTagsInput" class="dialog-search" type="text" placeholder="Etiquetas (saludable, tupper, congelable...)" />
+          <input id="slotIngredientsInput" class="dialog-search" type="text" placeholder="Ingredientes (separados por coma)" />
+          <input id="slotUrlInput" class="dialog-search" type="text" placeholder="URL de referencia (opcional)" />
+          <button id="slotSaveBtn" class="btn primary" type="button">Guardar en el hueco</button>
+        </div>
 
-      <div id="pickerList" class="picker-list"></div>
+        <div class="dialog-block">
+          <h4>Mis recetas</h4>
+          <input id="pickerSearch" class="dialog-search" type="text" placeholder="Filtrar mis recetas..." />
+          <select id="pickerTagFilter" class="dialog-search">
+            <option value="all">Todas las etiquetas</option>
+            <option value="saludable">Saludable</option>
+            <option value="thermomix">Thermomix</option>
+            <option value="congelable">Congelable</option>
+            <option value="tupper">Tupper</option>
+            <option value="rapida">Rápida</option>
+          </select>
+          <div id="pickerList" class="picker-list"></div>
+        </div>
+      </div>
 
       <div class="dialog-foot">
         <button id="removeFromSlotBtn" class="btn danger" value="remove">Quitar del hueco</button>
+        <button class="btn" value="cancel">Cancelar</button>
+      </div>
+    </form>
+  </dialog>
+
+  <!-- MODAL: asignar receta a calendario -->
+  <dialog id="assignDialog" class="dialog">
+    <form method="dialog" class="dialog-inner">
+      <div class="dialog-head">
+        <div>
+          <div class="dialog-kicker">Asignar al calendario</div>
+          <h3>Elige día y comida</h3>
+        </div>
+        <button class="icon-btn" value="cancel" aria-label="Cerrar">✕</button>
+      </div>
+
+      <div class="assign-grid">
+        <select id="assignDay" class="dialog-search"></select>
+        <select id="assignMeal" class="dialog-search">
+          <option value="lunch">Almuerzo</option>
+          <option value="dinner">Cena</option>
+        </select>
+      </div>
+
+      <div class="dialog-foot">
+        <button id="assignConfirmBtn" class="btn primary" type="button">Asignar</button>
         <button class="btn" value="cancel">Cancelar</button>
       </div>
     </form>
