Remove magic loop recipes and update recipes copy

--- a/index.html
+++ b/index.html
@@ -55,6 +55,25 @@
           <div class="card-title">
             <h2>Buscar ideas de recetas</h2>
             <p class="muted">Sugerencias filtrables: saludable, Thermomix, congelable y tupper.</p>
+            <div class="muted">
+              <p><strong>Tú escribes:</strong> “Salmón plancha con arroz y calabacín”.</p>
+              <p>La app no adivina mágicamente todo, pero sí puede ayudarte si etiquetas un poco:</p>
+              <ul>
+                <li>Proteína: salmón</li>
+                <li>Base: arroz</li>
+                <li>Técnica: plancha</li>
+                <li>Tags: tupper / congelable / alta proteína / rápida</li>
+              </ul>
+              <p>Con eso, te sugiere recetas “por el estilo” sin IA:</p>
+              <ul>
+                <li>Misma proteína o similar (pescado)</li>
+                <li>Misma base (arroz)</li>
+                <li>Mismos tags (tupper + congelable)</li>
+                <li>Misma técnica (plancha/sartén)</li>
+              </ul>
+              <p><strong>Ventajas:</strong> gratis, rápido, coherente, 100% bajo tu control, ideal para meal prep.</p>
+              <p><strong>Desventaja:</strong> tienes que etiquetar un poco (pero es mínimo).</p>
+            </div>
           </div>
 
           <div class="search">
