Add offline autotagging and similar recipe suggestions

--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
           </div>
 
           <div id="results" class="results" aria-label="Resultados de búsqueda"></div>
+
+          <div class="similar-section">
+            <div class="similar-head">
+              <h3>Sugerencias parecidas</h3>
+              <p class="muted" id="similarHint">Escribe algo en el buscador o elige una receta guardada.</p>
+            </div>
+            <div id="similarResults" class="results similar-results" aria-label="Sugerencias parecidas"></div>
+          </div>
         </div>
 
         <div class="card">
