--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Meal Planner</title>
+  <title>Tuppería</title>
   <meta name="description" content="Planificador de comidas con calendario, recetas y lista de la compra." />
   <meta name="theme-color" content="#3b82f6" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -15,7 +15,7 @@
 <body>
   <header class="topbar">
     <div class="brand">
-      <h1>Meal Planner</h1>
+      <h1>Tuppería</h1>
       <p>Planificador en 3 secciones: calendario, recetas y compra</p>
     </div>
 
@@ -251,8 +251,20 @@
     </form>
   </dialog>
 
-  <script>
-    window.FIREBASE_CONFIG = window.FIREBASE_CONFIG || null;
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyCvxpyyTZvVYhXX8MrtJ1PORMMKMJHD18M",
+      authDomain: "comida-fbfbd.firebaseapp.com",
+      projectId: "comida-fbfbd",
+      storageBucket: "comida-fbfbd.firebasestorage.app",
+      messagingSenderId: "1074209619328",
+      appId: "1:1074209619328:web:02b030bdec0bc599579565"
+    };
+
+    initializeApp(firebaseConfig);
+    window.FIREBASE_CONFIG = firebaseConfig;
     window.FIREBASE_SYNC_DOC = window.FIREBASE_SYNC_DOC || "default";
   </script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
