--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tuppería</title>
-  <meta name="description" content="Planificador de comidas con calendario, recetas y lista de la compra." />
+  <meta name="description" content="Planificador de comidas con calendario y lista de la compra." />
   <meta name="theme-color" content="#3b82f6" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -20,7 +20,6 @@
 
     <nav class="tabs" aria-label="Secciones">
       <button class="tab active" data-tab="plan">Calendario</button>
-      <button class="tab" data-tab="recipes">Recetas</button>
       <button class="tab" data-tab="shop">Compra</button>
     </nav>
   </header>
@@ -49,91 +48,7 @@
       </div>
 
       <div class="hint">
-        Tip: haz clic en un hueco (almuerzo/cena) para escribir un plato o asignar una receta guardada.
-      </div>
-    </section>
-
-    <!-- RECETAS -->
-    <section id="tab-recipes" class="tabpanel" aria-labelledby="Recetas">
-      <div class="recipes-layout">
-        <div class="card">
-          <div class="card-title">
-            <h2>Buscar ideas de recetas</h2>
-            <p class="muted">Sugerencias filtrables: saludable, Thermomix, congelable y tupper.</p>
-            <div class="muted">
-              <p><strong>Tú escribes:</strong> “Salmón plancha con arroz y calabacín”.</p>
-              <p>La app no adivina mágicamente todo, pero sí puede ayudarte si etiquetas un poco:</p>
-              <ul>
-                <li>Proteína: salmón</li>
-                <li>Base: arroz</li>
-                <li>Técnica: plancha</li>
-                <li>Tags: tupper / congelable / alta proteína / rápida</li>
-              </ul>
-              <p>Con eso, te sugiere recetas “por el estilo” sin IA:</p>
-              <ul>
-                <li>Misma proteína o similar (pescado)</li>
-                <li>Misma base (arroz)</li>
-                <li>Mismos tags (tupper + congelable)</li>
-                <li>Misma técnica (plancha/sartén)</li>
-              </ul>
-              <p><strong>Ventajas:</strong> gratis, rápido, coherente, 100% bajo tu control, ideal para meal prep.</p>
-              <p><strong>Desventaja:</strong> tienes que etiquetar un poco (pero es mínimo).</p>
-            </div>
-          </div>
-
-          <div class="search">
-            <input type="text" id="searchInput" placeholder="Ej: pollo al curry, lentejas, pasta..." />
-            <button id="searchBtn" class="btn primary">Buscar</button>
-          </div>
-
-          <div class="filter-row">
-            <span class="muted">Filtros:</span>
-            <label class="tag-filter"><input type="checkbox" value="saludable"> Saludable</label>
-            <label class="tag-filter"><input type="checkbox" value="thermomix"> Thermomix</label>
-            <label class="tag-filter"><input type="checkbox" value="congelable"> Congelable</label>
-            <label class="tag-filter"><input type="checkbox" value="tupper"> Tupper</label>
-          </div>
-
-          <div id="results" class="results" aria-label="Resultados de búsqueda"></div>
-
-          <div class="similar-section">
-            <div class="similar-head">
-              <h3>Sugerencias parecidas</h3>
-              <p class="muted" id="similarHint">Escribe algo en el buscador o elige una receta guardada.</p>
-            </div>
-            <div id="similarResults" class="results similar-results" aria-label="Sugerencias parecidas"></div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-title">
-            <h2>Mis recetas</h2>
-            <p class="muted">Guarda ideas, filtra por etiquetas y asígnalas al calendario.</p>
-          </div>
-
-          <div class="my-recipes-actions">
-            <input type="text" id="myRecipeSearch" class="input" placeholder="Filtrar por nombre..." />
-            <select id="myRecipeTag" class="input">
-              <option value="all">Todas las etiquetas</option>
-              <option value="saludable">Saludable</option>
-              <option value="thermomix">Thermomix</option>
-              <option value="congelable">Congelable</option>
-              <option value="tupper">Tupper</option>
-              <option value="rapida">Rápida</option>
-            </select>
-            <button id="clearRecipesBtn" class="btn danger">Borrar recetas</button>
-          </div>
-
-          <div class="inline-form">
-            <input type="text" id="customRecipeName" class="input" placeholder="Nueva receta rápida (nombre)" />
-            <input type="text" id="customRecipeTags" class="input" placeholder="Etiquetas: saludable, tupper..." />
-            <input type="text" id="customRecipeIngredients" class="input" placeholder="Ingredientes (separados por coma)" />
-            <input type="text" id="customRecipeUrl" class="input" placeholder="URL de referencia (opcional)" />
-            <button id="addCustomRecipeBtn" class="btn primary">Guardar receta</button>
-          </div>
-
-          <div id="myRecipes" class="my-recipes" aria-label="Lista de mis recetas"></div>
-        </div>
+        Tip: haz clic en un hueco (almuerzo/cena) para escribir un plato y, si quieres, sus ingredientes.
       </div>
     </section>
 
@@ -189,62 +104,15 @@
         <button class="icon-btn" value="cancel" aria-label="Cerrar">✕</button>
       </div>
 
-      <div class="dialog-columns">
-        <div class="dialog-block">
-          <h4>Escribir plato rápido</h4>
-          <input id="slotTextInput" class="dialog-search" type="text" placeholder="Ej: Ensalada de quinoa" />
-          <div class="checkbox-row">
-            <label><input type="checkbox" id="slotSaveAsRecipe"> Guardar como receta</label>
-          </div>
-          <input id="slotTagsInput" class="dialog-search" type="text" placeholder="Etiquetas (saludable, tupper, congelable...)" />
-          <input id="slotIngredientsInput" class="dialog-search" type="text" placeholder="Ingredientes (separados por coma)" />
-          <input id="slotUrlInput" class="dialog-search" type="text" placeholder="URL de referencia (opcional)" />
-          <button id="slotSaveBtn" class="btn primary" type="button">Guardar en el hueco</button>
-        </div>
-
-        <div class="dialog-block">
-          <h4>Mis recetas</h4>
-          <input id="pickerSearch" class="dialog-search" type="text" placeholder="Filtrar mis recetas..." />
-          <select id="pickerTagFilter" class="dialog-search">
-            <option value="all">Todas las etiquetas</option>
-            <option value="saludable">Saludable</option>
-            <option value="thermomix">Thermomix</option>
-            <option value="congelable">Congelable</option>
-            <option value="tupper">Tupper</option>
-            <option value="rapida">Rápida</option>
-          </select>
-          <div id="pickerList" class="picker-list"></div>
-        </div>
+      <div class="dialog-block">
+        <h4>Escribir plato</h4>
+        <input id="slotTextInput" class="dialog-search" type="text" placeholder="Ej: Ensalada de quinoa" />
+        <input id="slotIngredientsInput" class="dialog-search" type="text" placeholder="Ingredientes (separados por coma)" />
+        <button id="slotSaveBtn" class="btn primary" type="button">Guardar en el hueco</button>
       </div>
 
       <div class="dialog-foot">
         <button id="removeFromSlotBtn" class="btn danger" value="remove">Quitar del hueco</button>
-        <button class="btn" value="cancel">Cancelar</button>
-      </div>
-    </form>
-  </dialog>
-
-  <!-- MODAL: asignar receta a calendario -->
-  <dialog id="assignDialog" class="dialog">
-    <form method="dialog" class="dialog-inner">
-      <div class="dialog-head">
-        <div>
-          <div class="dialog-kicker">Asignar al calendario</div>
-          <h3>Elige día y comida</h3>
-        </div>
-        <button class="icon-btn" value="cancel" aria-label="Cerrar">✕</button>
-      </div>
-
-      <div class="assign-grid">
-        <select id="assignDay" class="dialog-search"></select>
-        <select id="assignMeal" class="dialog-search">
-          <option value="lunch">Almuerzo</option>
-          <option value="dinner">Cena</option>
-        </select>
-      </div>
-
-      <div class="dialog-foot">
-        <button id="assignConfirmBtn" class="btn primary" type="button">Asignar</button>
         <button class="btn" value="cancel">Cancelar</button>
       </div>
     </form>
