--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
     window.FIREBASE_SYNC_DOC = window.FIREBASE_SYNC_DOC || "default";
   </script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
   <script src="app.js"></script>
 </body>
