Add Firestore sync with auth

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       <h1>Tuppería</h1>
     </div>
 
+    <div class="auth" aria-live="polite">
+      <span id="authStatus" class="muted">Sin conexión</span>
+      <button id="authBtn" class="btn">Conectar con Google</button>
+    </div>
+
     <nav class="tabs" aria-label="Secciones">
       <button class="tab active" data-tab="plan">Calendario</button>
       <button class="tab" data-tab="shop">Compra</button>
