--- a/index.html
+++ b/index.html
@@ -118,10 +118,11 @@
     </form>
   </dialog>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
-
-    const firebaseConfig = {
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+  <script>
+    window.FIREBASE_CONFIG = {
       apiKey: "AIzaSyCvxpyyTZvVYhXX8MrtJ1PORMMKMJHD18M",
       authDomain: "comida-fbfbd.firebaseapp.com",
       projectId: "comida-fbfbd",
@@ -129,14 +130,11 @@
       messagingSenderId: "1074209619328",
       appId: "1:1074209619328:web:02b030bdec0bc599579565"
     };
-
-    initializeApp(firebaseConfig);
-    window.FIREBASE_CONFIG = firebaseConfig;
     window.FIREBASE_SYNC_DOC = window.FIREBASE_SYNC_DOC || "default";
+    if (window.firebase && !firebase.apps.length) {
+      firebase.initializeApp(window.FIREBASE_CONFIG);
+    }
   </script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
