Add Firebase config to app

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@ window.CALENDAR_ID = "mi-calendario";
 
   <script>
     window.CALENDAR_ID = window.CALENDAR_ID || "default";
+    window.FIREBASE_CONFIG = {
+      apiKey: "AIzaSyCvxpyyTZvVYhXX8MrtJ1PORMMKMJHD18M",
+      authDomain: "comida-fbfbd.firebaseapp.com",
+      projectId: "comida-fbfbd",
+      storageBucket: "comida-fbfbd.firebasestorage.app",
+      messagingSenderId: "1074209619328",
+      appId: "1:1074209619328:web:02b030bdec0bc599579565"
+    };
   </script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
