Add note date picker and weekday labels

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         <button class="btn ghost" id="todayBtn">Ir a hoy</button>
       </div>
 
+      <label class="note-label" for="noteDate">Elige el día de la nota</label>
+      <input id="noteDate" class="note-date" type="date" />
+
       <label class="note-label" for="noteInput">Escribe o edita tu nota</label>
       <textarea id="noteInput" class="note-input" placeholder="Añade una nota para este día…"></textarea>
 
