Add PWA icon manifest

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tuppería</title>
   <meta name="description" content="Calendario de comidas sincronizado en tiempo real con Firebase." />
+  <meta name="theme-color" content="#d96b4b" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="apple-touch-icon" sizes="192x192" href="icon/icon-192.png" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
