--- a/index.html
+++ b/index.html
@@ -12,73 +12,78 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header class="topbar">
-    <div class="brand">
-      <span class="brand-icon" aria-hidden="true">🍽️</span>
-      <div>
-        <h1>Tuppería</h1>
-        <p>Planifica comida y cena para las próximas dos semanas.</p>
-      </div>
-    </div>
-
-  </header>
-
-  <section class="status-bar">
-    <span class="status-dot" aria-hidden="true"></span>
-    <span id="syncStatus">Preparando…</span>
-  </section>
-
-  <main class="page-content">
-    <nav class="section-switch" aria-label="Secciones">
-      <button class="btn switch-btn is-active" type="button" data-view="calendarView" aria-pressed="true">
-        Calendario
-      </button>
-      <button class="btn switch-btn" type="button" data-view="shoppingView" aria-pressed="false">
-        Lista de la compra
-      </button>
-    </nav>
-
-    <section class="calendar-section view-panel is-active" id="calendarView" aria-labelledby="calendarTitle">
-      <header class="section-header">
+  <div class="app-shell">
+    <header class="topbar">
+      <div class="brand">
+        <span class="brand-icon" aria-hidden="true">🍽️</span>
         <div>
-          <h2 id="calendarTitle">Calendario</h2>
-          <p>Organiza las comidas y cenas de las próximas dos semanas.</p>
+          <h1>Tuppería</h1>
+          <p>Planifica comida y cena para las próximas dos semanas.</p>
         </div>
-      </header>
-      <div class="calendar-wrapper">
-        <div class="calendar-controls">
-          <button class="btn" id="prevWeek" type="button">Semana anterior</button>
-          <div class="range">
-            <div class="range-title" id="rangeTitle">—</div>
-            <div class="range-sub" id="rangeSubtitle">—</div>
-          </div>
-          <button class="btn" id="today" type="button">Hoy</button>
-          <button class="btn" id="nextWeek" type="button">Semana siguiente</button>
-        </div>
-
-        <div class="calendar-grid" id="calendarGrid" aria-live="polite"></div>
       </div>
-    </section>
+      <div class="topbar-actions">
+        <button class="theme-toggle" type="button" id="themeToggle" aria-pressed="false">
+          Modo oscuro
+        </button>
+        <div class="status-badge is-preparing">
+          <span class="status-dot" aria-hidden="true"></span>
+          <span id="syncStatus">Preparando…</span>
+        </div>
+      </div>
+    </header>
 
-    <section class="shopping view-panel" id="shoppingView" aria-labelledby="shoppingTitle">
-      <div class="shopping-card">
-        <header>
+    <main class="page-content">
+      <nav class="section-switch" aria-label="Secciones">
+        <button class="btn switch-btn is-active" type="button" data-view="calendarView" aria-pressed="true">
+          Calendario
+        </button>
+        <button class="btn switch-btn" type="button" data-view="shoppingView" aria-pressed="false">
+          Lista de la compra
+        </button>
+      </nav>
+
+      <section class="calendar-section view-panel is-active" id="calendarView" aria-labelledby="calendarTitle">
+        <header class="section-header">
           <div>
-            <h2 id="shoppingTitle">Compra</h2>
-            <p>Crea tu lista de la compra y añade lo que necesites.</p>
+            <h2 id="calendarTitle">Calendario</h2>
+            <p>Organiza las comidas y cenas de las próximas dos semanas.</p>
           </div>
         </header>
-        <form class="shopping-form" id="shoppingForm">
-          <label class="field">
-            <span>Nuevo elemento</span>
-            <input id="shoppingInput" type="text" placeholder="Ej: Tomates" />
-          </label>
-          <button class="btn secondary" type="submit">Añadir</button>
-        </form>
-        <ul class="shopping-list" id="shoppingList" aria-live="polite"></ul>
-      </div>
-    </section>
-  </main>
+        <div class="calendar-wrapper">
+          <div class="calendar-controls">
+            <button class="btn secondary" id="prevWeek" type="button">Semana anterior</button>
+            <div class="range">
+              <div class="range-title" id="rangeTitle">—</div>
+              <div class="range-sub" id="rangeSubtitle">—</div>
+            </div>
+            <button class="btn primary" id="today" type="button">Hoy</button>
+            <button class="btn secondary" id="nextWeek" type="button">Semana siguiente</button>
+          </div>
+
+          <div class="calendar-grid" id="calendarGrid" aria-live="polite"></div>
+        </div>
+      </section>
+
+      <section class="shopping view-panel" id="shoppingView" aria-labelledby="shoppingTitle">
+        <div class="shopping-card">
+          <header>
+            <div>
+              <h2 id="shoppingTitle">Compra</h2>
+              <p>Crea tu lista de la compra y añade lo que necesites.</p>
+            </div>
+          </header>
+          <form class="shopping-form" id="shoppingForm">
+            <label class="field">
+              <span>Nuevo elemento</span>
+              <input id="shoppingInput" type="text" placeholder="Ej: Tomates" />
+            </label>
+            <button class="btn secondary" type="submit">Añadir</button>
+          </form>
+          <ul class="shopping-list" id="shoppingList" aria-live="polite"></ul>
+        </div>
+      </section>
+    </main>
+  </div>
 
   <script type="module" src="app.js"></script>
 </body>
